# kobo-weather

./: Cargo.toml
src/: framebuffer.rs  gui.rs  main.rs  math.rs  openweather.rs  page.rs  region.rs  screen.rs  util.rs  weather_data.rs
src/gui/: graph.rs  gui.rs  image.rs  mod.rs  text.rs
src/widgets/: graph.rs  image.rs  mod.rs  text.rs  widget.rs
