[package]
name = "kobors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.3.0"
libc = "0.2.21"
image = "0.24.7"
rusttype = "0.9.3"
serde = { version="1.0.183", features = ["derive"] }
serde_json = "1.0"
